--- a/src/index.css
+++ b/src/index.css
@@ -234,3 +234,41 @@
 .animate-progress {
   animation: progressGrow 1.6s cubic-bezier(0.34, 1.56, 0.64, 1) forwards;
 }
+
+
+/*project*/
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Fade-in Up */
+@keyframes fade-in-up {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+.animate-fade-in-up {
+  animation: fade-in-up 0.8s ease forwards;
+}
+
+/* Tag animation */
+@keyframes fade-slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
+
+.animate-fade-slide-up {
+  animation: fade-slide-up 0.5s ease forwards;
+}
